Danny, please review.
2nd checkin for instantiator.  This gives us a read-only connector instantiator (no support for adding new connectors or changing existing configs for connectors).  But scheduler tests could now be written using the real instantiator, provided you point it to the new static config files in the top-level testdata directory.

New files:

InstantiatorException.java - new Exception class for when bad things happen during instantiation
SpringConnectorInstantiator.java - read-only connector instantiator/ConnectorTypeInstantiator.java
SpringUtils.java - some handy-dandy utils stuff for Spring
FilesystemConnectorConfigStore.java - stores connector configs on the Filesystem

Test files for the above

A new testdata directory at the top level, with some datafiles in it for the instantiator tests.  I'd like to move our existing tests to use this directory, but I don't want to refactor to many things in one checkin.

Changed:
Instantiator.java - add throws
MockManager.java - performance quibble - use Boolean.valueOf instead of new Boolean
ConnectorConfigStore.java - greatly changed to reflect better understandong of the instantiator's needs
Connector.java - update comments and get rid of the "setconfig" method - which I added recently but shouldn't have
ConnectorTypeInstantiator.java and ConnectorTypeInstantiatorTest.java - renamed as "SpringConnectorTypeInstantiator.java" etc.
SpiQueryTraversalManagerFromJcr.java - a few lines of dead code removed
MockJcrProperty.java - lower-case a method name that was acidentally upper-case
MockJcrValue.java - ditto
MockScheduler.java - add a catch resulting from change to Instantiator.java